sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:12: error: not found: value i
      if(plusPetit(getNombreValeurs()-2-i,getNombreValeurs()-3-i)==true){
                                        ^AlgCocktailSort1:12: error: not found: value i
      if(plusPetit(getNombreValeurs()-2-i,getNombreValeurs()-3-i)==true){
                                                               ^AlgCocktailSort1:13: error: not found: value i
        echange(getNombreValeurs()-2-i,getNombreValeurs()-3-i)
                                     ^AlgCocktailSort1:13: error: not found: value i
        echange(getNombreValeurs()-2-i,getNombreValeurs()-3-i)
                                                            ^