sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var test=false
  do{
    for(i <- 0 to getNombreValeurs()-2){
      if(plusPetit(i,i+1)==false){
        echange(i,i+1)
        test=true
      }
    }
    for(j <- 0 to getNombreValeurs()-2){
      if(plusPetit(getNombreValeurs()-2-i,getNombreValeurs()-3-i)==true){
        echange(getNombreValeurs()-2-i,getNombreValeurs()-3-i)
        test=true
      }
    }
  }
  while(test==true)
}